--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -54,20 +54,31 @@
 - initialization
 	- **initialization is not assignment**, even though they both use the = symbol. 
 		- initialization happens when a variable is given a value when it is created.
-		- assignment obliterates an object's current value and replaces that value with a new one.
+		- assignment obliterates an object's current value and replaces that value~~~~ with a new one.
+		- an example of the distinction: reference types or types with top-level const (see sections below) can only be *initialized*, not *assigned*.
+	- ***default initialization***
+		- happens when:
+			- nonstatic variables are defined without an explicit initializer at block scope (inside any brackets).
+			- members of a class are not explicitly initialized in a constructor initializer list.
+		- **built-in type variables (including arrays) are default initialized to *undefined* value.**
+			- defined outside any function body are initialized to zero.
+		- [classes control how objects of that class type are default initialized (and value initialized).](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)
+			- **classes without a default constructor don't allow default initialization (or value initialization) at all**, but most classes have default constructors that let us safely define objects without explicit initializers.
+				- for example, *std::string* uses its default constructor to default initialize to empty string no matter where it's defined.
+	- ***value initialization***
+		- &ast;NOTE: i'm not sure about *all* technical details about when value initialization happens, most information here is from other chapters.
+		- happens when:
+			- we define a [local *static* object](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-06.md#basics-61) without an initializer.
+			- we specify a dimension but use an empty list initializer for built-in arrays (see [ch3](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#built-in-arrays-35)).
+				- note that an array (built-in) will still be *default initialized* if we don't provide an initializer at all!
+			- we only supply a size to something like a vector to be initialized.
+		-  the library implicitly creates a value-initialized element initializer for each element:
+			- **zero for built-in types**, **using the default constructor for class types**
+			- for built-in arrays, each element is then value initialized. (think a vector of arrays where each array will be value initialized. when an array itself is value initialized, its elements are also value intialized)
+				- note: not really sure if my interpretation is correct on this one?
 	- ***list initialization*** (C++11)
 		- braced lists of initializers can be used.
-		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information (*int* type object being list-initialized with a *long double* initializer)
-	- ***default initialization***
-		- **without an explicit initializer, built-in type variables defined inside a function are uninitialized (with undefined value).** 
-			- defined outside any function body are initialized to zero.
-		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers
-			- for example, *std::string* default initializes to empty string no matter where it's defined.
-	- ***value initialization***
-		- *NOTE: i'm not sure about technical details about when value initialization happens, most information here is from other other chapters.
-		- generally happens when we only supply a size to something like a vector or array to be initialized.
-			- note that an array (built-in) will still be *default initialized* if we don't provide an initializer at all! value initialization happens for arrays when we add a list initializer; see [ch3](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#built-in-arrays-35) for details.
-		-  the library implicitly creates a value-initialized element initializer for each element. (**zero for built-in types**, element-value-initialized array for built-in arrays(?), **default initializer for class types like string**)
+		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information. (*int* type object can't be list-initialized with a *long double* initializer)
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
@@ -283,4 +294,4 @@ struct Sales_data {
 - what does it mean to be a pointer "one location past the end of an object"
 	- answer: see iterators and array pointers (ch3)
 - if you bind a reference to const to a nonconst object, then change the nonconst object directly, does the reference to const also change when you next use it? my intuition says yes, but the temporary object concept says no.
-- not really sure about the details of initialization.
+- not really sure about the details of initialization for arrays.
