--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -3,7 +3,7 @@
 ## member functions
 
 ### new core ideas
-- functions in a class
+- declaration and definition of functions in / related to a class.
 	- member functions must be declared inside the class body.
 	- member functions may be defined inside or outside the class body.
 		- conventionally defined (outside) in the source file corresponding to the header with the class body.
@@ -17,7 +17,7 @@
 		- inside the member function, we can refer directly to the members of the object on which the function was called.
 			- *memberName* is equivalent to an implicit *this->memberName*
 	- we can also return a dereferenced *this* to return the object as a whole from a function.
-		- recall from ch6, **use a reference function-return-type to return the object (*&ast;this*) as an lvalue.** (return the object itself, not a temporary copy of the object)
+		- recall from ch6, **use a reference function-return-type to return the object (in this case, *&ast;this*) as an lvalue.** (returns the object itself, not a temporary copy of the object)
 			- doing this allows us to chain calls (i.e. multiple dot operators) to **nonconst** member functions on the same object.
 			- a const member function that returns **this* as a reference should have a return type that is reference to const. 
 				- these can't be chained with other "action" functions, as they would return the object with an added const restriction.
@@ -33,6 +33,7 @@
 - use const member functions where possible to increase flexibility and safety.
 - in practice, well designed C++ programs tend to have lots of small functions that are called to do the "real work" of some other set of functions.
 - terminology review: a class *definition* includes all of its member functions' *declarations*. a member function's *definition* does not need to appear in a class *definition* (and usually(?) appears in a separate source file).
+	- a member function whose definition appears in its class's definition is an *inline* function.
 
 ## constructors
 
@@ -42,49 +43,90 @@
 - the job of a constructor is to initialize the data members of a class object.
 	- when we create a const object of a class type, the object does not assume its "constness" until after the constructor completes the object's intialization.
 - **default constructor**
-	- classes control default initialization through the default constructor, which takes no arguments (usually has no parameters).
-		- a constructor that supplies default arguments for all its parameters also defines default constructor.
-	- if a class does not explicitly define **any** constructor at all, the compiler implicitly defines a ***synthesized default constructor***.
-		- initializes members with **in-class intializers** or (if in-class initializers don't exist) performs default intialization on members.
-		- *synthesized* default constructors are not automatically implicitly defined if a class has other constructors.
-	- if we want to use the *synthesized* default constructor **with** other constructors, we can write ***= default*** after the parameter list on either the default constructor declaration or definition (C++11).
-- defining a constructor outside the class body follows the rules for any other member function defined outside.
+	- the default constructor of a class controls [default initialization *and* value initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) on objects of the class-type.
+	- a default constructor takes no arguments (usually has no parameters).
+		- a constructor that supplies default arguments for all its parameters also defines the default constructor.
+	- ***synthesized* default constructor**
+		- initializes members with **in-class intializers** or (if in-class initializers don't exist) performs **default intialization** on members.
+		- **synthesized default constructors are only used if:**
+			- a class does not explicitly define **any** constructor at all, in which case the compiler implicitly defines the default constructor as a synthesized default constructor.
+			- a class requests the compiler to use the synthesized default constructor by explicitly declaring or defining its default constructor with ***= default*** after the parameter list.** (C++11)
+				- if we **want** to use the synthesized default constructor with other (non-default) constructors, we **must** do this.
+- defining a constructor outside the class body follows the rules for any member function defined outside.
 - ***constructor initializer list*** 
 	- is part of a constructor's **definition**.
 	- is the first thing executed in a constructor.
 	- specifies initial values for and initializes one or more data members of the object being created.
 		- order of initialization isn't based on the order of appearance in the constructor initializer list, but rather the order in which the members appear in the class definition.
-	- when any data member is **omitted** from the constructor initializer list, the data member is implicitly initialized using the same process as the synthesized default constructor.
+	- when any data member is **omitted** from the constructor initializer list, the data member is implicitly initialized using the same process as the synthesized default constructor (in-class initializer or if in-class initializer doesn't exist, default initialization).
 		- data members can technically then be *assigned* (overriding the in-class or default initialization) in the body of a constructor.
 			- this doesn't work for members that are references, are *const*, or are of a class-type that does not have a default constructor, so these types **must** be initialized in the constructor intializer list!
 				- recall references and const cannot be assigned after initialization.
 ~~~
-struct Sales_data {
+class Sales_data {
+public:
 	// default constructor requests synthesized default constructor
 	Sales_data() = default;
 	
 	// (inline) constructor definition with constructor initializer list
 	// empty body only because there's no further work
-	Sales_data(unsigned num, double price):
-		units_sold(num), revenue(price*num) { }
-	
-	// in-class initializers
-	unsigned units_sold = 0;
-	double revenue = 0;
+	Sales_data(unsigned new_sold, double price):
+		units_sold_(new_sold), revenue_(price*new_sold) { }
+
+private:
+	// in-class initializers for members
+	unsigned units_sold_ = 0;
+	double revenue_ = 0;
 	
 	// this ends up default-initialized, which is only ok because we know strings default initialize to empty.
-	std::string identification;
+	std::string id_;
 }	
+~~~
+
+- ***delegating constructors***
+	- we can put another previously declared constructor A inside constructor B's constructor initializer list to "delegate" a part of or all of B's work to A.
+		- delegating constructors can only have a single entry that is the other constructor.
+~~~
+// all constructors are implicitly inline in this case (bad practice? idk)
+class Sales_data {
+public:
+	// nondelegating constructor
+	Sales_data(std::string id, unsigned new_sold, double price):
+		units_sold_(new_sold), revenue_(price*new_sold), id_(id) {
+		// specify commands to do a backflip
+	}
+	
+	// default constructor as a delegating constructor
+	// keep in mind this overrides the in-class initializers below, 
+	// which is unnecessary in this case and usually bad practice!
+	Sales_data(): 
+		Sales_data("", 0, 0) { // automatically does a backflip
+		// specify commands to do something after backflip
+	}
+	
+	// other constructor as a delegating constructor
+	Sales _data(std::string id): 
+		Sales_data(id, 0, 0) { // automatically does a backflip
+		// specify commands to do something after backflip
+	}
+
+private:
+	// members
+	unsigned units_sold_ = 0; // in-class initializer
+	double revenue_ = 0; // in-class initializer
+	std::string id_;
+}
 ~~~
 
 
 ### misc conventions and tips
 - **routinely use the constructor initializer list!**
 	- generally good idea to write constructor initializers in the same order as the corresponding data members are declared.
-	- **avoid using members to initialize other members** when possible, as the order of initialization depends on unobvious factors (see above).
+	- **in constructor initializer lists, avoid using members to initialize other members** when possible, as the order of initialization depends on unobvious factors (see above).
 - the best way to specify default values for data members of class type (and built-in types?) is with in-class initializers. (C++11)
 - constructors should not override in-class initializers except to provide a different initial value.
-- **request / rely on the synthesized default constructor only if you know it does the right thing.**
+- **it is almost always right to explicitly provide a default constructor if other constructors are being defined.**
+- **rely on / request the synthesized default constructor only if you know it does the right thing.**
 	- when all built-in and compound-type data members have in-class initializers, and members of other class-types have in-class intializers or <ins>known</ins> default constructors, etc.
 
 
@@ -122,7 +164,7 @@ struct Sales_data {
 
 ### new core ideas
 - **type members** ([local type aliases](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#dealing-with-types-25)) can be defined by a class.
-	- subject to the same access controls as any other member (public indicates that we want users to use that type name).
+	- subject to the same access controls as any other member (public indicates that we want external users to use that type name).
 	- usually defined at the beginning of a class definition (we can only use type aliases after they're defined).
 - ***mutable* data members** (specified by a *mutable* prefix keyword) are never const, even when they are members of a const object.
 	- const member functions may (only) change mutable members.
@@ -146,7 +188,7 @@ struct Sales_data {
 - **every class defines its own new scope.**
 	- the name of a member defined outside the class body must include a scope prefix (***className::***) indicating the class it belongs to.
 		- constructors defined outside would have the form *className::className*
-		- once the compiler sees the prefix with the scope operator in the function name, the rest of the definition is interpreted as being inside the scope of the class (we can access other members normally without extra qualifications).
+		- once the compiler sees the prefix with the scope operator in a function name, the rest of the function definition is interpreted as being inside the scope of the class (we can access other members normally without extra qualifications).
 			- **this includes the parameter list but excludes the return type**, which could be a [type member](#additional-class-features).
 - member function **definitions** are processed **after** the compiler processes **all** of the **declarations** in the class.
 - **name lookup for class member *declarations*:**
