small formatting edits

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -62,8 +62,8 @@
 			- members of a class are not explicitly initialized in a constructor initializer list.
 		- **built-in type variables (including arrays) are default initialized to *undefined* value.**
 			- defined outside any function body are initialized to zero.
-		- [classes control how objects of that class type are default initialized (and value initialized).](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)
-			- **classes without a default constructor don't allow default initialization (or value initialization) at all**, but most classes have default constructors that let us safely define objects without explicit initializers.
+		- [classes use default constructors to control how objects of that class type are default initialized and value initialized.](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)
+			- **classes without a default constructor (meaning not even a synthesized default constructor) don't allow default initialization or value initialization at all**, but most classes have default constructors that let us safely define objects without explicit initializers.
 				- for example, *std::string* uses its default constructor to default initialize to empty string no matter where it's defined.
 	- ***value initialization***
 		- &ast;NOTE: i'm not sure about *all* technical details about when value initialization happens, most information here is from other chapters.
@@ -71,9 +71,10 @@
 			- we define a [local *static* object](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-06.md#basics-61) without an initializer.
 			- we specify a dimension but use an empty list initializer for built-in arrays (see [ch3](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#built-in-arrays-35)).
 				- note that an array (built-in) will still be *default initialized* if we don't provide an initializer at all!
-			- we only supply a size to something like a vector to be initialized.
+			- we only supply only a size to something like a vector to be initialized.
 		-  the library implicitly creates a value-initialized element initializer for each element:
-			- **zero for built-in types**, **using the default constructor for class types**
+			- **zero for built-in types.**
+			- **use the default constructor for class types**, see bolded note above.
 			- for built-in arrays, each element is then value initialized. (think a vector of arrays where each array will be value initialized. when an array itself is value initialized, its elements are also value intialized)
 				- note: not really sure if my interpretation is correct on this one?
 	- ***list initialization*** (C++11)
