more small edits

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -70,7 +70,7 @@
 		- happens when:
 			- we define a [local *static* object](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-06.md#basics-61) without an initializer.
 			- we specify a dimension but use an empty list initializer for built-in arrays (see [ch3](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#built-in-arrays-35)).
-				- note that an array (built-in) will still be *default initialized* if we don't provide an initializer at all!
+				- note that a built-in array will still be *default initialized* if we don't provide an initializer at all!
 			- we only supply only a size to something like a vector to be initialized.
 		-  the library implicitly creates a value-initialized element initializer for each element:
 			- **zero for built-in types.**
