even more small edits

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -54,7 +54,7 @@
 - initialization
 	- **initialization is not assignment**, even though they both use the = symbol. 
 		- initialization happens when a variable is given a value when it is created.
-		- assignment obliterates an object's current value and replaces that value~~~~ with a new one.
+		- assignment obliterates an object's current value and replaces that value with a new one.
 		- an example of the distinction: reference types or types with top-level const (see sections below) can only be *initialized*, not *assigned*.
 	- ***default initialization***
 		- happens when:
@@ -73,8 +73,8 @@
 				- note that a built-in array will still be *default initialized* if we don't provide an initializer at all!
 			- we only supply only a size to something like a vector to be initialized.
 		-  the library implicitly creates a value-initialized element initializer for each element:
-			- **zero for built-in types.**
-			- **use the default constructor for class types**, see bolded note above.
+			- **uses zero for built-in types.**
+			- **uses the default constructor for class types**, see bolded note above.
 			- for built-in arrays, each element is then value initialized. (think a vector of arrays where each array will be value initialized. when an array itself is value initialized, its elements are also value intialized)
 				- note: not really sure if my interpretation is correct on this one?
 	- ***list initialization*** (C++11)
