--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -19,7 +19,7 @@
 		- parameters are also automatic objects.
 	- a ***local static object*** (a local variable with keyword *static*) persists until the program terminates.
 		- initialized *before* the first time execution passes through the object's definition.
-		- value initialized if no initializer (to zero if built-in type).
+		- [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) if no initializer.
 		- subsequent calls ignore(?) the initialization statement because the variable already exists (initialization is not assignment!).
 ~~~
 size_t count_calls() {
@@ -63,8 +63,7 @@ int main() {
 		- some classes cannot be copied at all and require the use of reference parameters.
 	- references (and pointers) can be used to conceptually "return" multiple values from a function.
 - **const parameters and arguments**
-	- refer back to ch2 for general initialization rules!
-		- recall [plain reference/pointer type matching rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) and [top-level / low-level const rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
+	- recall [**plain** reference/pointer type matching rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) and [top-level / low-level const rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
 	- **reference parameters that are not changed inside a function should be *references to const*.**
 		- using a plain reference type parameter not only misleads the function caller, but also greatly limits the type of arguments that can be passed in! (can't pass const, literal, or any object that requires conversion)
 - array parameters
