--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -58,7 +58,7 @@
 	- is the first thing executed in a constructor.
 	- specifies initial values for and initializes one or more data members of the object being created.
 		- order of initialization isn't based on the order of appearance in the constructor initializer list, but rather the order in which the members appear in the class definition.
-	- when any data member is **omitted** from the constructor initializer list, the data member is implicitly initialized using the same process as the synthesized default constructor (in-class initializer or if in-class initializer doesn't exist, default initialization).
+	- when any data member is **omitted** from the constructor initializer list, the data member is implicitly initialized using the same process as the synthesized default constructor (in-class initializer or, if in-class initializer doesn't exist, default initialization).
 		- data members can technically then be *assigned* (overriding the in-class or default initialization) in the body of a constructor.
 			- this doesn't work for members that are references, are *const*, or are of a class-type that does not have a default constructor, so these types **must** be initialized in the constructor intializer list!
 				- recall references and const cannot be assigned after initialization.
@@ -78,7 +78,8 @@ private:
 	unsigned units_sold_ = 0;
 	double revenue_ = 0;
 	
-	// this ends up default-initialized, which is only ok because we know strings default initialize to empty.
+	// id_ ends up default-initialized
+	// (which is only ok because we know strings default initialize to empty)
 	std::string id_;
 }	
 ~~~
@@ -90,24 +91,28 @@ private:
 // all constructors are implicitly inline in this case (bad practice? idk)
 class Sales_data {
 public:
-	// nondelegating constructor
+	// nondelegating constructor A
 	Sales_data(std::string id, unsigned new_sold, double price):
 		units_sold_(new_sold), revenue_(price*new_sold), id_(id) {
-		// specify commands to do a backflip
+		// i can specify commands to do a backflip
 	}
 	
 	// default constructor as a delegating constructor
-	// keep in mind this overrides the in-class initializers below, 
-	// which is unnecessary in this case and usually bad practice!
+	// this unnecessarily overrides the in-class initializers below, but this is just an example.
 	Sales_data(): 
-		Sales_data("", 0, 0) { // automatically does a backflip
-		// specify commands to do something after backflip
+		Sales_data("", 0, 0) { 
+		// initializes members according to constructor A
+		// automatically does a backflip as specified in constructor A
+		
+		// i can specify further commands to do something after backflip, like do a pushup
 	}
 	
 	// other constructor as a delegating constructor
 	Sales _data(std::string id): 
-		Sales_data(id, 0, 0) { // automatically does a backflip
-		// specify commands to do something after backflip
+		Sales_data(id, 0, 0) {
+		// initializes members according to constructor A
+		// automatically does a backflip as specified in constructor A
+		// i can specify further commands to do something after backflip, like take a shot
 	}
 
 private:
