tweaks to make certain things clearer

--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -63,9 +63,9 @@ int main() {
 		- some classes cannot be copied at all and require the use of reference parameters.
 	- references (and pointers) can be used to conceptually "return" multiple values from a function.
 - **const parameters and arguments**
-	- recall [**plain** reference/pointer type matching rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) and [top-level / low-level const rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
+	- recall [top-level / low-level const rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
 	- **reference parameters that are not changed inside a function should be *references to const*.**
-		- using a plain reference type parameter not only misleads the function caller, but also greatly limits the type of arguments that can be passed in! (can't pass const, literal, or any object that requires conversion)
+		- using a [plain reference](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) type parameter instead not only misleads the function caller, but also greatly limits the type of arguments that can be passed in! (can't pass const, literal, or any object that requires conversion)
 - array parameters
 	- recall from ch3 that we cannot "copy" an array, and when we use an array it usually decays into a pointer.
 		- [run-down of what actually happens when we pass arrays into functions (array-to-pointer decay), as well as how to pass arrays by reference](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay)
