--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -44,13 +44,16 @@
 	- when we create a const object of a class type, the object does not assume its "constness" until after the constructor completes the object's intialization.
 - **default constructor**
 	- the default constructor of a class controls [default initialization *and* value initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) on objects of the class-type.
+		- **when <ins>using</ins> a class, don't confuse an object declaration with a function declaration!**
+			- *MyClass obj();* declares a MyClass-returning function with no parameters.
+			- *MyClass obj;* creates a default-initialized object of type MyClass.
 	- a default constructor takes no arguments (usually has no parameters).
 		- a constructor that supplies default arguments for all its parameters also defines the default constructor.
 	- ***synthesized* default constructor**
 		- initializes members with **in-class intializers** or (if in-class initializers don't exist) performs **default intialization** on members.
 		- **synthesized default constructors are only used if:**
 			- a class does not explicitly define **any** constructor at all, in which case the compiler implicitly defines the default constructor as a synthesized default constructor.
-			- a class requests the compiler to use the synthesized default constructor by explicitly declaring or defining its default constructor with ***= default*** after the parameter list.** (C++11)
+			- a class requests the compiler to use the synthesized default constructor by explicitly declaring or defining its default constructor with ***= default*** after the parameter list. (C++11)
 				- if we **want** to use the synthesized default constructor with other (non-default) constructors, we **must** do this.
 - defining a constructor outside the class body follows the rules for any member function defined outside.
 - ***constructor initializer list*** 
@@ -94,25 +97,27 @@ public:
 	// nondelegating constructor A
 	Sales_data(std::string id, unsigned new_sold, double price):
 		units_sold_(new_sold), revenue_(price*new_sold), id_(id) {
-		// i can specify commands to do a backflip
+		// this specific constructor can specify commands to do a backflip
 	}
 	
-	// default constructor as a delegating constructor
-	// this unnecessarily overrides the in-class initializers below, but this is just an example.
+	// default constructor as a delegating constructor (delegates work to A)
+	// this unnecessarily overrides the in-class initializers below (bad practice!)
+	// but this is just an example
 	Sales_data(): 
 		Sales_data("", 0, 0) { 
 		// initializes members according to constructor A
 		// automatically does a backflip as specified in constructor A
 		
-		// i can specify further commands to do something after backflip, like do a pushup
+		// this specific constructor specify further commands like do a pushup
 	}
 	
-	// other constructor as a delegating constructor
+	// other constructor as a delegating constructor (delegates work to A)
 	Sales _data(std::string id): 
 		Sales_data(id, 0, 0) {
 		// initializes members according to constructor A
 		// automatically does a backflip as specified in constructor A
-		// i can specify further commands to do something after backflip, like take a shot
+		
+		// this specific constructor can specify further commands like do a 360 windmill.
 	}
 
 private:
@@ -125,15 +130,14 @@ private:
 
 
 ### misc conventions and tips
-- **routinely use the constructor initializer list!**
-	- generally good idea to write constructor initializers in the same order as the corresponding data members are declared.
+- **routinely use constructor initializer lists!**
 	- **in constructor initializer lists, avoid using members to initialize other members** when possible, as the order of initialization depends on unobvious factors (see above).
-- the best way to specify default values for data members of class type (and built-in types?) is with in-class initializers. (C++11)
-- constructors should not override in-class initializers except to provide a different initial value.
+- **the best way to specify default values for data members of class type (and built-in types?) is with in-class initializers.** (C++11)
+	- only use default arguments in constructors if absolutely necessary.
 - **it is almost always right to explicitly provide a default constructor if other constructors are being defined.**
 - **rely on / request the synthesized default constructor only if you know it does the right thing.**
-	- when all built-in and compound-type data members have in-class initializers, and members of other class-types have in-class intializers or <ins>known</ins> default constructors, etc.
-
+	- when all built-in and compound-type data members have in-class initializers, members of other class-types have in-class intializers or <ins>known</ins> default constructors, etc.
+- constructors should usually not override in-class initializers except to provide a different initial value.
 
 ## access control and encapsulation
 
